--- a/Integrated Presenter/MediaPlayer2.xaml
+++ b/Integrated Presenter/MediaPlayer2.xaml
@@ -14,8 +14,9 @@
         <MediaElement Name="videoPlayer" LoadedBehavior="Manual" UnloadedBehavior="Close" Grid.RowSpan="2"></MediaElement>
         <Image Name="imagePlayer" Grid.RowSpan="2"></Image>
         <Rectangle Name="BlackSource" Fill="Black" Grid.RowSpan="2"></Rectangle>
-        <Viewbox Grid.Row="1" Margin="10">
+        <Viewbox Grid.Row="1" Margin="10" Panel.ZIndex="10">
             <StackPanel Orientation="Vertical">
+                <TextBlock Name="PostMessages" Foreground="Red" Panel.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
                 <TextBlock Name="SetupMessages" Foreground="LightGreen" Panel.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
                 <TextBlock Name="MainMessages" Foreground="Orange" Panel.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
             </StackPanel>
