slide creater preview - loop video previews on assets and rendered slides - show rendered audio resources with filename and music icon - show rendered action slides with action text

--- a/SlideCreater/ViewControls/SlideContentPresenter.xaml
+++ b/SlideCreater/ViewControls/SlideContentPresenter.xaml
@@ -11,9 +11,11 @@
             <Viewbox Stretch="Uniform">
                 <Border>
                     <Grid Height="1080" Width="1920">
-                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="200" Opacity="0.5">Empty Slide</TextBlock>
+                        <Viewbox Panel.ZIndex="2">
+                            <TextBlock Name="textDisplay" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="200" Opacity="0.5">Empty Slide</TextBlock>
+                        </Viewbox>
                         <Image Name="ImgDisplay"></Image>
-                        <MediaElement LoadedBehavior="Manual" Name="VideoDisplay"></MediaElement>
+                        <MediaElement Name="VideoDisplay" LoadedBehavior="Manual"></MediaElement>
                     </Grid>
                 </Border>
             </Viewbox>
