--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -28,6 +28,9 @@
                 <MenuItem Name="mipreviewslide" Click="ClickTogglePreviewSlide" Header="Preview Slides" IsChecked="true" IsCheckable="true"></MenuItem>
                 <MenuItem Name="mipreviewkey" Click="ClickTogglePreviewKey" Header="Preview Keys" IsCheckable="true"></MenuItem>
             </MenuItem>
+            <MenuItem Header="Recovery">
+                <MenuItem Click="RecoverAutoSave" Header="Recover Auto Save"></MenuItem> 
+            </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="Commands" Click="ClickHelpCommands"></MenuItem>
             </MenuItem>
@@ -114,7 +117,7 @@
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <!--<StackPanel Name="slidelist"></StackPanel>-->
-                    <ListBox Name="slidelist" SelectionChanged="slidelist_SelectionChanged"></ListBox>
+                    <ListBox Background="WhiteSmoke" Name="slidelist" SelectionChanged="slidelist_SelectionChanged"></ListBox>
                 </Grid>
 
 
