--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -91,9 +91,15 @@
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0" Background="LightGray">
-                            <TextBlock>
-                                Render Output:
-                            </TextBlock>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock>
+                                Error List:
+                                </TextBlock>
+                                <StackPanel Orientation="Horizontal" Margin="50,0,0,0">
+                                    <CheckBox Name="cb_message_view_debug" Click="cb_message_view_debug_Click">Debug</CheckBox>
+                                    <CheckBox Name="cb_message_view_info" Click="cb_message_view_info_Click">Info</CheckBox>
+                                </StackPanel>
+                            </StackPanel>
                         </Grid>
                         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                             <!--<TextBlock Name="tbConsole"></TextBlock>-->
