--- a/MockSwitcher/Mock/MockMultiviewerWindow.xaml
+++ b/MockSwitcher/Mock/MockMultiviewerWindow.xaml
@@ -81,19 +81,19 @@
 
 
                 <Border Background="Black" Grid.Row="1" Grid.Column="0" BorderBrush="Gray" BorderThickness="2,2,2,2">
-                    <Image x:Name="ImgPulpit" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/leftshot.png"></Image>
+                    <Image x:Name="ImgPulpit" Grid.ColumnSpan="1" Source="pack://application:,,,/MockSwitcher;component/Mock/Images/leftshot.png"></Image>
                 </Border>
                 <Border Background="Black" Grid.Row="1" Grid.Column="1" BorderBrush="Gray" BorderThickness="2,2,2,2">
-                    <Image Name="ImgCenter" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/centershot.png"></Image>
+                    <Image Name="ImgCenter" Grid.ColumnSpan="1" Source="pack://application:,,,/MockSwitcher;component/Mock/Images/centershot.png"></Image>
                 </Border>
                 <Border Background="Black" Grid.Row="1" Grid.Column="2" BorderBrush="Gray" BorderThickness="2,2,2,2">
-                    <Image Name="Imgcenter" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/rightshot.png"></Image>
+                    <Image Name="Imgcenter" Grid.ColumnSpan="1" Source="pack://application:,,,/MockSwitcher;component/Mock/Images/rightshot.png"></Image>
                 </Border>
                 <Border Background="Black" Grid.Row="1" Grid.Column="3" BorderBrush="Gray" BorderThickness="2,2,2,2">
-                    <Image Name="ImgOrgan" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/organshot.png"></Image>
+                    <Image Name="ImgOrgan" Grid.ColumnSpan="1" Source="pack://application:,,,/MockSwitcher;component/Mock/Images/organshot.png"></Image>
                 </Border>
                 <Border Background="Black" Grid.Row="2" Grid.Column="0" BorderBrush="Gray" BorderThickness="2,2,2,2">
-                    <Image Name="ImgSlide" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/black.png"></Image>
+                    <Image Name="ImgSlide" Grid.ColumnSpan="1" Source="pack://application:,,,/MockSwitcher;component/Mock/Images/black.png"></Image>
                 </Border>
                 <Border Background="Black" Grid.Row="2" Grid.Column="1" BorderBrush="Gray" BorderThickness="2,2,2,2">
                     <Image Name="ImgKey" Grid.ColumnSpan="1"></Image>
