--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -96,15 +96,53 @@
                                 Error List:
                                 </TextBlock>
                                 <StackPanel Orientation="Horizontal" Margin="50,0,0,0">
-                                    <CheckBox Name="cb_message_view_debug" Click="cb_message_view_debug_Click">Debug</CheckBox>
-                                    <CheckBox Name="cb_message_view_info" Click="cb_message_view_info_Click">Info</CheckBox>
+                                    <CheckBox Margin="0,0,10,0" Name="cb_message_view_debug" Click="cb_message_view_debug_Click">Debug</CheckBox>
+                                    <CheckBox Margin="0,0,10,0" Name="cb_message_view_info" Click="cb_message_view_info_Click">Info</CheckBox>
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
                         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                             <!--<TextBlock Name="tbConsole"></TextBlock>-->
                             <!--<FlowDocument Name="error_report"></FlowDocument>-->
-                            <StackPanel Name="error_report" Orientation="Vertical"></StackPanel>
+                            <!--<StackPanel Name="error_report" Orientation="Vertical"></StackPanel>-->
+                            <ListView Name="error_report_view">
+                                <ListView.Resources>
+                                    <Style TargetType="{x:Type ListViewItem}">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Level}" Value="0">
+                                                <Setter Property="Background" Value="LightGray"></Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Level}" Value="1">
+                                                <Setter Property="Background" Value="DeepSkyBlue"></Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Level}" Value="2">
+                                                <Setter Property="Background" Value="WhiteSmoke"></Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Level}" Value="3">
+                                                <Setter Property="Background" Value="Orange"></Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Level}" Value="4">
+                                                <Setter Property="Background" Value="MediumPurple"></Setter>
+                                                <Setter Property="Foreground" Value="White"></Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Level}" Value="5">
+                                                <Setter Property="Background" Value="Red"></Setter>
+                                                <Setter Property="Foreground" Value="White"></Setter>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </ListView.Resources>
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Level" DisplayMemberBinding="{Binding Level}"></GridViewColumn>
+                                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding ErrorName}"></GridViewColumn>
+                                        <GridViewColumn Header="Info" DisplayMemberBinding="{Binding ErrorMessage}"></GridViewColumn>
+                                        <GridViewColumn Header="Token" DisplayMemberBinding="{Binding Token}"></GridViewColumn>
+                                        <GridViewColumn Header="Inner" DisplayMemberBinding="{Binding Inner}"></GridViewColumn>
+                                        <GridViewColumn Header="Generator" DisplayMemberBinding="{Binding Generator}"></GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
                         </ScrollViewer>
                     </Grid>
                 </Grid>
