try get get presentation stuff out of MainWindow

--- a/Integrated Presenter/App.xaml
+++ b/Integrated Presenter/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Integrated_Presenter.App"
+﻿<Application x:Class="IntegratedPresenter.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Integrated_Presenter"
+             xmlns:local="clr-namespace:IntegratedPresenter"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
