--- a/Integrated Presenter/Controls/SlidePoolSource.xaml
+++ b/Integrated Presenter/Controls/SlidePoolSource.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Integrated_Presenter.SlidePoolSource"
+﻿<UserControl x:Class="IntegratedPresenter.SlidePoolSource"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Integrated_Presenter"
+             xmlns:local="clr-namespace:IntegratedPresenter" xmlns:local1="clr-namespace:IntegratedPresenter;assembly=PresentationEngine"
              mc:Ignorable="d" 
              d:DesignHeight="210" d:DesignWidth="350">
     <Grid Height="210" Width="350">
@@ -122,7 +122,7 @@
                     </StackPanel>
                 </Grid>
                 <Grid Grid.Row="1" Grid.Column="1" Grid.RowSpan="3">
-                    <local:MediaPlayer2 x:Name="mediapreview" Panel.ZIndex="100"></local:MediaPlayer2>
+                    <local1:MediaPlayer2 x:Name="mediapreview" Panel.ZIndex="100"></local1:MediaPlayer2>
                     <Rectangle Fill="Black" Panel.ZIndex="1"></Rectangle>
                     <TextBlock x:Name="tbDuration" Foreground="Orange" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Panel.ZIndex="100">
                         <TextBlock.Background>
