--- a/Integrated Presenter/Windows/Connection.xaml
+++ b/Integrated Presenter/Windows/Connection.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Integrated_Presenter.Connection"
+﻿<Window x:Class="IntegratedPresenter.Connection"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Integrated_Presenter"
+        xmlns:local="clr-namespace:IntegratedPresenter"
         mc:Ignorable="d"
         Title="Connect" Height="120" Width="380">
     <Grid>
