--- a/Integrated Presenter/Windows/InputForm.xaml
+++ b/Integrated Presenter/Windows/InputForm.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Integrated_Presenter.InputForm"
+﻿<Window x:Class="IntegratedPresenter.InputForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Integrated_Presenter"
+        xmlns:local="clr-namespace:IntegratedPresenter"
         mc:Ignorable="d"
         Background="#3f3f3f"
         Title="Set Value" Height="120" Width="400">
