--- a/Integrated Presenter/Windows/PIPControl.xaml
+++ b/Integrated Presenter/Windows/PIPControl.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Integrated_Presenter.PIPControl"
+﻿<Window x:Class="IntegratedPresenter.PIPControl"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Integrated_Presenter"
+        xmlns:local="clr-namespace:IntegratedPresenter"
         mc:Ignorable="d"
         PreviewKeyDown="Window_PreviewKeyDown"
         PreviewKeyUp="Window_PreviewKeyUp"
