--- a/PresentationEngine/MediaPlayer2.xaml
+++ b/PresentationEngine/MediaPlayer2.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Integrated_Presenter.MediaPlayer2"
+﻿<UserControl x:Class="IntegratedPresenter.MediaPlayer2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Integrated_Presenter"
+             xmlns:local="clr-namespace:IntegratedPresenter"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
