--- a/PresentationEngine/PresenterDisplay.xaml
+++ b/PresentationEngine/PresenterDisplay.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Integrated_Presenter.PresenterDisplay"
+﻿<Window x:Class="IntegratedPresenter.PresenterDisplay"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Integrated_Presenter"
+        xmlns:local="clr-namespace:IntegratedPresenter"
         mc:Ignorable="d"
         KeyDown="Window_KeyDown"
         Loaded="Window_Loaded"
